<resources>
    <string name="app_name">Namlah User</string>

    <string name="orders">Orders</string>
    <string name="notifications">Notifications</string>
    <string name="editProfile">Edit Profile</string>
    <string name="accountCharging">Account charging</string>
    <string name="aboutUs">About us</string>
    <string name="contactUs">Contact us</string>
    <string name="term">Terms &amp; conditions</string>
    <string name="privacy">Privacy policy</string>
    <string name="signOut">Sign out</string>
    <string name="username">Username</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="yourMessage">Your message</string>
    <string name="resend_it">Resend it</string>
    <string name="send_code">Send Code</string>
    <string name="send">Send</string>
    <string name="language">Language</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="address">Address</string>
    <string name="nationality">Nationality</string>
    <string name="notification">Notification</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="select">Select</string>
    <string name="successfully_send">Your order has been successfully added</string>

    <string name="change_phone_number_title">Change Phone Number</string>
    <string name="change_phone_number_message">We will sent a code to your new mobile number</string>

    <string name="change_username_title">Change Username</string>
    <string name="change_username_message">Enter New Name</string>

    <string name="change_password_title">Change Password</string>
    <string name="change_password_message">Enter New Password</string>
    <string name="order_category">Category:</string>
    <string name="order_price">Price:</string>
    <string name="order_status">Status:</string>
    <string name="order_reason">Reason:</string>
    <string name="confirm_location">Confirm Location</string>
    <string name="provider_name">Provider Name:</string>
    <string name="my_number">My Number:</string>
    <string name="finish_and_order">Finish &amp; Order</string>


    <string name="order_canceled">Canceled</string>
    <string name="order_waiting">Waiting</string>
    <string name="order_completed">Completed</string>
    <string name="update_profile">The profile updated successfully</string>

    <string name="email">Email</string>

    <string name="our_services">Our services</string>
    <string name="finishOrder">Finish order</string>
    <string name="serviceProviders">Service Providers</string>

    <string name="contactWithProvider">Call with provider</string>
    <string name="trackOrder">Track your order</string>
    <string name="take_image">This app needs access to the storage even when you are getting pictures</string>
    <string name="cancelOrder">Cancel The Order</string>
    <string name="loading">Loading</string>
    <string name="call">Call</string>
    <string name="message">Message</string>
    <string name="whatsapp">WhatsApp</string>
    
    <string name="orderNumber">Order number:</string>
    <string name="category">Category:</string>
    <string name="date">Date:</string>
    <string name="price_material">Price of fetching materials:</string>
    <string name="PriceOfMaterials">Price of materials:</string>
    <string name="timeTaken">Time taken to work:</string>
    <string name="TotalSummation">Total summation:</string>
    <string name="bill">Bill</string>
    <string name="paymentMethod">Payment method</string>
    <string name="cash">Cash</string>
    <string name="credit">Credit Card</string>
    <string name="confirm">Confirm</string>

    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="skip">SKIP</string>
    <string name="next">Next</string>

    <string name="get_started">Get started</string>
    <string name="contact_with_the_customer">Contact with the customer</string>
    <string name="contact_the_customer_and_inform_him_about_your_services">Contact the customer and inform him about your services.</string>
    <string name="get_a_return">Get a Return</string>
    <string name="you_can_get_paid_for_the_tasks_you_do">You can get paid for the tasks you do.</string>
    <string name="find_your_work">Find your work</string>
    <string name="we_provide_you_the_best_service_providers_and_technicians">We provide you the best service providers and technicians.</string>
    <string name="login_to_your_account">Login to your account</string>
    <string name="order_details">Order details</string>
    <string name="verification_code">Verification code</string>
    <string name="forget_password">Forget password</string>
    <string name="accept_the_terms_amp_conditions"><![CDATA[Accept the terms & conditions]]></string>
    <string name="sign_up">Sign up</string>
    <string name="or">or</string>
    <string name="sign_in">Sign in</string>
    <string name="already_have_account">Already have account?</string>
    <string name="user_forget_password">Forget Password?</string>
    <string name="new_user">New User?</string>
    <string name="sign_in_with">Sign in with</string>
    <string name="verify">Verify</string>
    <string name="otp_message">Please enter the 4 - digital verification code that was sent to the number:</string>
    <string name="otp_hint">****</string>

    <string name="not_received">Not Received?</string>
    <string name="fake_mobile_number">(+970) 599 123 456</string>
    <string name="enter_your_phone_number_to_reset_the_password_and_then_click_send">Enter your phone number to reset the password and then click send.</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="order_photo">Order Photo</string>
    <string name="see_more">See More</string>
    <string name="problem_description">Problem Description</string>
    <string name="location_details">Location Details</string>
    <string name="lorem_text">Enter your phone number to reset the password and then click send. Enter your phone number to reset the password and then click send. Enter your phone number to reset the password and then click send. Enter your phone number to reset the password and then click send. Enter your phone number to reset the password and then click send.</string>
    <string name="accept">Accept</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="fake_address">Gaza, Palestine</string>
    <string name="fake_name">Ismail A. Amassi</string>
    <string name="fake_nationality">Palestinian</string>
    <string name="my_services">My Services</string>
    <string name="add_new_services">Add New Services</string>

    <string name="hello">Hello,</string>
    <string name="whatsService">What service are you looking for?</string>
    <string name="pickUp">Pick up my location</string>

    <string name="change_language_title">Change Language</string>
    <string name="change_language_message">Choose New Language</string>
    <string name="create_new_account">Create New Account</string>
    <string name="general_error_message">Error</string>
    <string name="current_password">Current Password</string>
    <string name="save">Save</string>
    <string name="arabic">Arabic</string>
    <string name="english">English</string>
    <string name="start_work">Start Work</string>
    <string name="fake_time">02:13:08</string>
    <string name="pause">Pause</string>
    <string name="finish">Finish</string>
    <string name="was_it_with_you_or_arrived_at_delivery">Was It With You Or Arrived At Delivery?</string>
    <string name="with_me">With Me</string>
    <string name="delivery">Delivery</string>
    <string name="item_name">Item Name</string>
    <string name="item_price">Item Price</string>
    <string name="select_service_you_provide">Select Service You Provide</string>
    <string name="select_areas_you_cover">Select Areas You Cover</string>
    <string name="add">ADD</string>
    <string name="click_here_to_select_areas_from_list">Click here to select areas from list</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="timeIsRunning">Timer Running</string>
    <string name="timerDescription">Timer is Running</string>

</resources>