<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="actionOnClick"
            type="android.view.View.OnClickListener" />

        <variable
            name="currentLanguage"
            type="Integer" />

    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="8dp"
        app:cardCornerRadius="@dimen/_8sdp"
        tools:context=".presentation.fragments.common.EditTextBottomSheetFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_home_indicator"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/ib_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/app_name"
                android:onClick="@{(view)->actionOnClick.onClick(view)}"
                android:padding="@dimen/_4sdp"
                android:src="@drawable/ic_close_24px"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView3" />


            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/change_language_title"
                android:textSize="@dimen/_16ssp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/imageView3"
                app:layout_constraintStart_toStartOf="@+id/imageView3"
                app:layout_constraintTop_toBottomOf="@+id/imageView3" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:text="@string/change_language_message"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/ib_close"
                app:layout_constraintTop_toBottomOf="@+id/textView10" />

            <View
                android:id="@+id/view"
                android:layout_width="1dp"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/_32sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_save" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_save"
                style="@style/AppButton.AccentButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_64sdp"
                android:text="@string/save"
                android:onClick="@{(view)->actionOnClick.onClick(view)}"
                app:layout_constraintEnd_toEndOf="@+id/rg_languages"
                app:layout_constraintStart_toStartOf="@+id/rg_languages"
                app:layout_constraintTop_toBottomOf="@+id/rg_languages" />

            <RadioGroup
                android:id="@+id/rg_languages"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:checkedButton="@{currentLanguage == 1 ? @id/rb_englishLanguage :@id/rb_arabicLanguage }"
                app:layout_constraintEnd_toEndOf="@+id/textView16"
                app:layout_constraintStart_toStartOf="@+id/textView16"
                app:layout_constraintTop_toBottomOf="@+id/textView16">

                <RadioButton
                    android:id="@+id/rb_arabicLanguage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_4sdp"
                    android:textSize="@dimen/_14ssp"
                    android:text="@string/arabic" />

                <RadioButton
                    android:id="@+id/rb_englishLanguage"
                    android:layout_margin="@dimen/_4sdp"
                    android:textSize="@dimen/_14ssp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/english" />
            </RadioGroup>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</layout>