<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="actionOnClick"
            type="android.view.View.OnClickListener" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.fragments.wizard.verification_code.VerificationCodeFragment">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_verifyOTP"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:background="@drawable/btn_background"
            android:onClick="@{(view)->actionOnClick.onClick(view)}"
            android:text="@string/verify"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pv_verifyOTP" />


        <com.chaos.view.PinView
            android:id="@+id/pv_verifyOTP"
            style="@style/PinWidget.PinView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:cursorVisible="true"
            android:hint="@string/otp_hint"
            android:focusable="true"
            android:inputType="numberSigned"
            android:padding="@dimen/_4sdp"
            android:textColor="@color/primary_color"
            android:textSize="@dimen/_18ssp"
            android:textStyle="bold"
            app:cursorColor="@color/accent_color"
            app:cursorWidth="@dimen/_2sdp"
            app:hideLineWhenFilled="false"
            app:itemCount="4"
            app:itemSpacing="@dimen/_8sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_phoneNumber"
            app:lineColor="@color/gray_color"
            app:lineWidth="2dp"
            app:viewType="line" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:text="@string/otp_message"
            android:textAlignment="center"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar" />

        <TextView
            android:id="@+id/tv_phoneNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:drawablePadding="@dimen/_2sdp"
            android:text="@string/fake_mobile_number"
            android:textColor="@color/button_color"
            android:textSize="@dimen/_14ssp"
            app:drawableEndCompat="@drawable/ic_baseline_edit_24"
            app:drawableTint="@color/button_color"
            app:layout_constraintEnd_toEndOf="@+id/textView7"
            app:layout_constraintStart_toStartOf="@+id/textView7"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />


        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_verifyOTP">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/not_received"
                android:textSize="@dimen/_12ssp" />

            <TextView
                android:id="@+id/tv_resendOTPCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_4sdp"
                android:onClick="@{(view)->actionOnClick.onClick(view)}"
                android:text="@string/resend_it"
                android:textColor="@color/button_color"
                android:textSize="@dimen/_12ssp" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvTimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="03:00"
            android:textColor="@color/btn_color"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>