<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="actionOnClick"
            type="android.view.View.OnClickListener" />
    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        app:cardCornerRadius="@dimen/_8sdp"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/_6sdp">

            <TextView
                android:id="@+id/textView16"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:text="@string/change_phone_number_message"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/ib_close"
                app:layout_constraintTop_toBottomOf="@+id/ib_close" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_home_indicator"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/ib_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/app_name"
                android:onClick="@{(view)->actionOnClick.onClick(view)}"
                android:padding="@dimen/_4sdp"
                android:src="@drawable/ic_close_24px"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView3" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_currentPassword"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_16sdp"
                android:layout_marginTop="16dp"
                android:hint="@string/phone_number"
                app:boxStrokeColor="@color/primary_color"
                app:hintTextColor="@color/primary_color"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView16">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_currentPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/change_phone_number_title"
                android:textSize="@dimen/_16ssp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/imageView3"
                app:layout_constraintStart_toStartOf="@+id/imageView3"
                app:layout_constraintTop_toBottomOf="@+id/imageView3" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_save"
                style="@style/AppButton.AccentButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_104sdp"
                android:onClick="@{(view)->actionOnClick.onClick(view)}"
                android:text="@string/save"
                app:layout_constraintEnd_toEndOf="@+id/til_currentPassword"
                app:layout_constraintStart_toStartOf="@+id/til_currentPassword"
                app:layout_constraintTop_toBottomOf="@+id/til_currentPassword" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</layout>